--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -14,3 +14,23 @@
     }
   }
 }
+
+@layer base {
+  html {
+    scrollbar-width: none;
+    scrollbar-color: transparent transparent;
+  }
+
+  ::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: transparent;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+}
