Define new component for responsive table paddings

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,4 +1,4 @@
 /*! @import */
 @import "tailwind/components.css";
 @import "components/site_title.css";
-@import "components/pane_element.css";
+@import "components/landing.css";
