--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -2,3 +2,4 @@
 @import "tailwind/components.css";
 @import "components/site_title.css";
 @import "components/landing.css";
+@import "components/details.css";
