Create unified link component

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,5 +1,6 @@
 /*! @import */
 @import "tailwind/components.css";
 @import "components/site_title.css";
+@import "components/links.css";
 @import "components/landing.css";
 @import "components/details.css";
